# Object-Pose-Evaluation

./: LICENSE  Object Transform from World to Camera.md  README.md  Understanding Pose Error.md  Vision 6D Image Mesh Plane Description.md  main.py  pyproject.toml  understanding_annotated_json_file.md
scripts/: compute_add_01d.py  compute_adds_01d.py  compute_auc_add.py  compute_auc_adds.py  compute_degree_cm.py
